<resources>
    <string name="app_name">Task6</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="textview">TextView</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="complete">Complete</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="collection_name">questioniare</string>
</resources>
